# advent-of-code-2024

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/template/: runner.rs
