[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies

counter = { git = "https://github.com/mjclarke94/counter-rs.git", branch = "custom-hasher" }
itertools = "0.13.0"
rustc-hash = "2.1.0"
nom = "7.1.3"
cached = { version = "0.54.0", features = ["ahash"] }
strum = "0.26.3"
enum-group = "0.1.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
num_enum = "0.7.3"
parse-display = "0.10.0"
